<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="name_app">PBMap</string>
    <string name="action_back">Previous map</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Hint: [WB], 116@wi,…</string>
    <string name="not_found">Place not found</string>
    <string name="about">About</string>
    <string name="action_share">Share with</string>
    <string name="rate">Rate</string>
    <string name="about_description">PBMap is an interactive map of Bialystok University of Technology designed in order to facilitate navigation and locating objects on polytechnic.</string>
    <string name="about_author">Author:\u0020</string>
    <string name="about_version">Version: %1$s</string>
    <string name="could_not_open_android_market">Could not open Android market, please install the market application (Google Play).</string>
    <string name="about_report">Report bug</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_attributions">Attributions</string>
    <string name="enable">Enable</string>
    <string name="cancel">Cancel</string>
    <string name="gps_disabled_message">%1$s needs access to your location to display marker on your current position. Please turn on Location Services.</string>
    <string name="gps_permissions_disabled_message">%1$s needs Location permissions to use Location Service. The app wants to display marker on your current position. Please allow %1$s to access Location.</string>
    <string name="location_permissions">Location permissions</string>
    <string name="ok">OK</string>
    <string name="waiting_for_location">Waiting for location…</string>
    <string name="logo">Logo</string>
    <string name="help">Help</string>
    <string name="maps">Maps</string>
    <string name="airplane_enabled">Please disable the airplane mode</string>
    <string name="wifi_disabled">Please enable WIFI or use GPS location for more accurate tracking</string>
    <string name="place_destination_marker">Place Destination marker</string>
    <string name="place_source_marker">Place source marker</string>
    <string name="map">Map</string>
    <string name="action_search_description">Use search to find a place e.g. room or building.\n\nLimit search scope by using place@map syntax e.g. 116@wi.</string>
    <string name="menu">Menu</string>
    <string name="menu_description">You can switch between maps using menu.\n\nYou can also find additional information about the app at the bottom.</string>
    <string name="floor">Floor</string>
    <string name="floor_description">When this button appears it will mean that the opened map contains additional floors</string>
    <string name="more_features">More features</string>
    <string name="more_features_description">You can enable GPS for easier navigation on the map (might be inaccurate indoors).\n\nSometimes there can be additional info about the currently viewed place.</string>
    <string name="action_back_description">After going deep into the map a back button will appear which will allow you to go back a map</string>
    <string name="maps_description">By interacting with map you can navigate to different places.\nUse long-press to put a source/destination markers after which the shortest route between those locations will be drawn.</string>
    <string name="distance">Distance: %1$d %2$s</string>
    <string name="unfinished">This map has not been finished yet. Use long-press if you want to improve the data.</string>
    <string name="improve">Report new/wrong place</string>
    <string name="improve_message">What should[not] be placed at the pressed location?</string>
    <string name="report">Report</string>
    <string name="required">This field is required</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="show_all_routes">Display all routes</string>
    <string name="unit_system">Unit system</string>
    <string name="io.github.t3r1jj.pbmap.model.dictionary.MeasurementSystem.SI">Metric</string>
    <string name="io.github.t3r1jj.pbmap.model.dictionary.MeasurementSystem.US">Imperial</string>
    <string name="LANGUAGES.default">System default</string>
    <string name="debug">Debug</string>
</resources>
